# macroquad

./: Cargo.toml  README.md  TODO.md
src/: audio.rs  color.rs  fs.rs  geometry.rs  input.rs  lib.rs  material.rs  prelude.rs  quad_gl.rs  telemetry.rs  text.rs  texture.rs  time.rs  tobytes.rs  utils.rs  window.rs
src/audio/: mod.rs
src/draw/: geometry.rs  mod.rs  shapes.rs  text.rs  texture.rs
src/fs/: mod.rs
src/graphics/: camera.rs  geometry.rs  material.rs  mod.rs  renderer.rs
src/input/: mod.rs
src/text/: atlas.rs  mod.rs
src/texture/: atlas.rs  image.rs  mod.rs  target.rs  texture.rs
src/ui/render/: mesh_rasterizer.rs
src/window/: mod.rs
