[package]
name = "macroquad_abstractions"
version = "0.4.13"
edition = "2021"
description = "Macroquad abstractions exposed as a library"
readme="README.md"
license = "MIT OR Apache-2.0"

[features]
audio = ["quad-snd"]
log-rs = ["log"]
glam-serde = ["glam/serde"]
ui = []
default = []

[package.metadata.android]
assets = "examples/"

[profile.dev.package."*"]
opt-level = 3

[package.metadata.docs.rs]
all-features = true

[dependencies]
miniquad = { version = "=0.4.7", features = ["log-impl"] }
quad-rand = "0.2.3"
glam = { version = "0.27", features = ["scalar-math"] }
image = { version = "0.24", default-features = false, features = ["png", "tga"] }
fontdue = "0.9"
backtrace = { version = "0.3.60", optional = true, default-features = false, features = [ "std", "libbacktrace" ] }
log = { version = "0.4", optional = true }
quad-snd = { version = "0.2", optional = true }

# Workaround to fix the examples
# This allows to use macroquad-particles in examples without two versions of macroquad
[patch.crates-io]
macroquad_abstractions = { path = './' }

